kubernetes/development/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: solar-system-route
  namespace: _{_NAMESPACE_}_
spec:
  parentRefs:
  - name: solar-gateway
    namespace: ingress-basic
  hostnames:
  - "solar-system-development._{_INGRESS_IP_}_.nip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: solar-system
      port: 3000
